# garage_rfid

./: .env  .gitignore  Cargo.toml  Justfile  LICENSE  README.md  config.toml  dev.sh  sync.sh
config/: default.toml
examples/: bouncer.rs  collate_threads.rs  config.rs  data_buffer.rs  database.rs  database2.rs  gatekeeper.rs  json.rs  json_db_type.rs  mio_evented.rs  mio_evented_test.rs  single_pin.rs  slog.rs  user_api.rs  uuid.rs
migrations/2018-03-05-140327_add_users_table/: up.sql
migrations/2018-03-11-202430_create_credentials_table/: up.sql
migrations/2018-03-19-122317_create_logs_table/: up.sql
src/: bouncer.rs  configuration.rs  database.rs  diesel_middleware.rs  garage_door.rs  garage_door_middleware.rs  gpio_util.rs  great_manager.rs  http_server.rs  iot_thing.rs  key_mapper.rs  lib.rs  log_data.rs  logger_middleware.rs  main.rs  request_logging_middleware.rs  rfid_buffer.rs  rfid_reader.rs  root_logger.rs  schema.rs  slacker.rs  users_controller.rs
src/api/: controller_helper.rs  garage_door_controller.rs  mod.rs  users_update_action.rs
src/gotham/: garage_door_controller.rs  mod.rs
src/iot/: close_action.rs  garage_door_event.rs  iot_thing.rs  mod.rs
src/models/: credential.rs  log.rs  mod.rs  user.rs
