[package]
name = "garage_rfid"
version = "0.1.0"
authors = ["olson3r <scootles.olson@gmail.com>"]

[features]
default = []

[dependencies]
chrono = "0.4.0"
config = "0.8"
error-chain = "0.11.0"
diesel = { version = "1.1.1", features = ["chrono", "sqlite", "uuid"] }
mio = "0.6"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.10"
slog = "2.1.1"
slog-async = "2.2.0"
slog-atomic = "2.0.0"
slog-json = "2.2.0"
slog-term = "2.3.0"
sysfs_gpio = { version = "0.5", features = ["mio-evented"] }
uuid = { version = "0.6.1", features = ["v4"] }

[dev-dependencies]
cargo-watch = "6.0.0"
diesel_cli = { version = "1.1.0", default-features = false, features = ["sqlite"] }
dotenv = "0.10.1"
just = "0.3.9"
