[package]
name = "garage_rfid"
version = "0.3.0"
authors = ["olson3r <scootles.olson@gmail.com>"]

[features]
default = []

[dependencies]
chrono = { version = "0.4.0", features = ["serde"] }
config = "0.8"
diesel = { version = "1.1.1", features = ["chrono", "sqlite", "uuid"] }
error-chain = "0.11.0"
futures = "0.1.21"
gotham = "0.2.1"
gotham_derive = "0.2.0"
hyper = "0.11.24"
mime = "0.3.5"
mio = "0.6"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.10"
slack-hook = "0.6.0"
slog = "2.1.1"
slog-async = "2.2.0"
slog-atomic = "2.0.0"
slog-json = "2.2.0"
slog-term = "2.3.0"
sysfs_gpio = { version = "0.5", features = ["mio-evented", "tokio"] }
tokio-core = "0.1"
uuid = { version = "0.6.1", features = ["v4"] }

[dev-dependencies]
cargo-edit = "0.2.0"
cargo-watch = "6.0.0"
diesel_cli = { version = "1.1.0", default-features = false, features = ["sqlite"] }
dotenv = "0.10.1"
just = "0.3.9"
