[package]
name = "garage_rfid"
version = "0.4.0"
authors = ["olson3r <scootles.olson@gmail.com>"]

[features]
default = []

[dependencies]
chrono = { version = "0.4.7", features = ["serde"] }
config = "0.9.3"
diesel = { version = "1.4.2", features = ["chrono", "sqlite", "uuid"] }
error-chain = "0.12.1"
futures = "0.1.28"
hyper = "0.12.33"
mime = "0.3.13"
mio = "0.6.19"
r2d2 = "0.8.5"
r2d2-diesel = "1.0.0"
serde = "1.0.98"
serde_derive = "1.0.98"
serde_json = "1.0.40"
slack-hook = "0.8.0"
slog = "2.5.2"
slog-async = "2.3.0"
slog-atomic = "2.0.0"
slog-json = "2.3.0"
slog-term = "2.4.1"
sysfs_gpio = { version = "0.5.4", features = ["mio-evented", "use_tokio"] }
tokio-core = "0.1.17"
uuid = { version = "0.7.4", features = ["v4"] }
webthing = "0.12.0"
actix-web = "1.0.5"
bus = "2.2.2"
nanoid = "0.2.0"

[dev-dependencies]
cargo-edit = "0.3.3"
cargo-watch = "7.2.1"
diesel_cli = { version = "1.4.0", default-features = false, features = ["sqlite"] }
dotenv = "0.14.1"
just = "0.4.4"
